[workspace]
members = ["macros"]

[package]
name = "smol-symbol"
version = "0.1.5"
edition = "2021"
authors = ["sam0x17"]
description = "Provides compile-time globally unique, 25-character, 128-bit symbols similar to the Symbol type in Crystal Lang."
keywords = ["symbol", "compile-time", "crystal", "macro", "unique"]
repository = "https://github.com/sam0x17/smol-symbol"
homepage = "https://sam0x17.dev"
license = "MIT"

[dependencies]
smol-symbol-macros = { path = "macros", version = "0.1.5" }
docify = "0.2"
phf = { version = "0.11", features = ["macros"], default-features = false }

[features]
default = []
generate-readme = []
