[package]
name = "smol-symbol-macros"
version = "0.1.7"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
description = "support macros for smol-symbol"
repository = "https://github.com/sam0x17/smol-symbol"
homepage = "https://sam0x17.dev"

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1"
syn = { version = "2", features = ["full"] }
quote = "1"
